--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								</ul>
 							</li>
 							<li>
-								<a class="menu__link" href="../Диплом/index.html" title="Главная">Главная</a>
+								<a class="menu__link" href="index.html" title="Главная">Главная</a>
 							</li>
 							<li>
 								<a class="menu__link" href="../Диплом/pages/Score/Score.html" title="Магазины">Магазины</a>
