--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<a class="menu__link" href="index.html" title="Главная">Главная</a>
 							</li>
 							<li>
-								<a class="menu__link" href="../pages/Score/Score.html" title="Магазины">Магазины</a>
+								<a class="menu__link" href="../pages/Score/index.html" title="Магазины">Магазины</a>
 							</li>
 							<li>
 								<a class="menu__form-link" href="#" onclick="show('block')" title="Регистрация">Регистрация</a>
@@ -126,7 +126,7 @@
 					</div>
 					<div class="body__items">
 						<h3>Пробковый пол</h3>
-						<a href="../Диплом/pages/Cork floor/cork-floor.html" class="wave-btn" title="Пробковый пол">
+						<a href="../Диплом/pages/Cork floor/index.html" class="wave-btn" title="Пробковый пол">
 							<span class="wave-btn__text">Перейти</span>
 							<span class="wave-btn__waves"></span>
 						</a>
