--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<a class="menu__link" href="index.html" title="Главная">Главная</a>
 							</li>
 							<li>
-								<a class="menu__link" href="score.html" title="Магазины">Магазины</a>
+								<a class="menu__link" href="../score.html" title="Магазины">Магазины</a>
 							</li>
 							<li>
 								<a class="menu__form-link" href="#" onclick="show('block')" title="Регистрация">Регистрация</a>
