--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 								<a class="menu__link" href="index.html" title="Главная">Главная</a>
 							</li>
 							<li>
-								<a class="menu__link" href="pages/Score/score.html" title="Магазины">Магазины</a>
+								<a class="menu__link" href="https://anikey-pavel.github.io/Diploma/pages/Score/score.html"
+									title="Магазины">Магазины</a>
 							</li>
 							<li>
 								<a class="menu__form-link" href="#" onclick="show('block')" title="Регистрация">Регистрация</a>
@@ -194,8 +195,8 @@
 							</div>
 
 							<div>
-								<a target="_blank" href="../Диплом/pages/Cork floor/cork-floor.html"
-									title="Пробковый пол">Пробковый пол</a>
+								<a target="_blank" href="../Диплом/pages/Cork floor/index.html" title="Пробковый пол">Пробковый
+									пол</a>
 							</div>
 							<div>
 								<a target="_blank" href="../Диплом/pages/Quartz vinyl/Quartz-vinyl.html"
