--- a/pages/Score/score.html
+++ b/pages/Score/score.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="pages/Score/css/Score.css">
-	<link rel="stylesheet" href="css/common-styles.css">
+	<link rel="stylesheet" href="../Score/css/Score.css">
+	<link rel="stylesheet" href="../../css/common-styles.css">
 	<title>Напольные покрытия</title>
 </head>
 
@@ -203,7 +203,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="../Диплом/pages/Score/js/Score.js"></script>
+	<script src="../../js/script.js"></script>
 </body>
 
 </html>
