--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 				<div class="content__body body">
 					<div class="body__items">
 						<h3>Ламинат</h3>
-						<a href="../Диплом/pages/laminat/laminate.html" class="wave-btn" title="Ламинат">
+						<a href="https://anikey-pavel.github.io/Diploma/pages/laminat/laminate.html" class="wave-btn"
+							title="Ламинат">
 							<span class="wave-btn__text">Перейти</span>
 							<span class="wave-btn__waves"></span>
 						</a>
