--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 					</div>
 					<div id="weather" class="weather"></div>
 				</div>
-				<a href="../Диплом/index.html" class="header__title" title="Главная">Напольные покрытия</a>
+				<a href="https://anikey-pavel.github.io/Diploma/index.html" class="header__title" title="Главная">Напольные
+					покрытия</a>
 			</div>
 		</div>
 		<div class="content">
@@ -107,35 +108,39 @@
 					</div>
 					<div class="body__items">
 						<h3>Линолиум</h3>
-						<a href="../Диплом/pages/Linoleum/Linoleum.html" class="wave-btn" title="Линолиум">
+						<a href="https://anikey-pavel.github.io/Diploma/pages/Linoleum/Linoleum.html" class="wave-btn"
+							title="Линолиум">
 							<span class="wave-btn__text">Перейти</span>
 							<span class="wave-btn__waves"></span>
 						</a>
 					</div>
 					<div class="body__items">
 						<h3>Плитка</h3>
-						<a href="../Диплом/pages/Tile/Tile.html" class="wave-btn" title="Плитка">
+						<a href="https://anikey-pavel.github.io/Diploma/pages/Tile/Tile.html" class="wave-btn" title="Плитка">
 							<span class="wave-btn__text">Перейти</span>
 							<span class="wave-btn__waves"></span>
 						</a>
 					</div>
 					<div class="body__items">
 						<h3>Паркет</h3>
-						<a href="../Диплом/pages/Parquet/Parquet.html" class="wave-btn" title="Паркет">
+						<a href="https://anikey-pavel.github.io/Diploma/pages/Parquet/Parquet.html" class="wave-btn"
+							title="Паркет">
 							<span class="wave-btn__text">Перейти</span>
 							<span class="wave-btn__waves"></span>
 						</a>
 					</div>
 					<div class="body__items">
 						<h3>Пробковый пол</h3>
-						<a href="../Диплом/pages/Cork floor/index.html" class="wave-btn" title="Пробковый пол">
+						<a href="https://anikey-pavel.github.io/Diploma/pages/Cork floor/index.html" class="wave-btn"
+							title="Пробковый пол">
 							<span class="wave-btn__text">Перейти</span>
 							<span class="wave-btn__waves"></span>
 						</a>
 					</div>
 					<div class="body__items">
 						<h3>Кварц виинил</h3>
-						<a href="../Диплом/pages/Quartz vinyl/Quartz-vinyl.html" class="wave-btn" title="Кварц виинил">
+						<a href="https://anikey-pavel.github.io/Diploma/pages/Quartz vinyl/Quartz-vinyl.html" class="wave-btn"
+							title="Кварц виинил">
 							<span class="wave-btn__text">Перейти</span>
 							<span class="wave-btn__waves"></span>
 						</a>
@@ -180,27 +185,31 @@
 						</div>
 						<div class="content-footer__column">
 							<div>
-								<a target="_blank" href="../Диплом/pages/laminat/laminate.html" title="Ламинат">Ламинат</a>
+								<a href="https://anikey-pavel.github.io/Diploma/pages/laminat/laminate.html"
+									title="Ламинат">Ламинат</a>
 							</div>
 
 							<div>
-								<a target="_blank" href="../Диплом/pages/Linoleum/Linoleum.html" title="Линолиум">Линолиум</a>
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Linoleum/Linoleum.html"
+									title="Линолиум">Линолиум</a>
 							</div>
 							<div>
-								<a target="_blank" href="../Диплом/pages/Tile/Tile.html" title="Плитка">Плитка</a>
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Tile/Tile.html" title="Плитка">Плитка</a>
 							</div>
 						</div>
 						<div class="content-footer__column">
 							<div>
-								<a target="_blank" href="../Диплом/pages/Parquet/Parquet.html" title="Паркет">Паркет</a>
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Parquet/Parquet.html"
+									title="Паркет">Паркет</a>
 							</div>
 
 							<div>
-								<a target="_blank" href="../Диплом/pages/Cork floor/index.html" title="Пробковый пол">Пробковый
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Cork floor/index.html"
+									title="Пробковый пол">Пробковый
 									пол</a>
 							</div>
 							<div>
-								<a target="_blank" href="../Диплом/pages/Quartz vinyl/Quartz-vinyl.html"
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Quartz vinyl/Quartz-vinyl.html"
 									title="Кварц винил">Кварц винил</a>
 							</div>
 						</div>
