--- a/pages/Linoleum/Linoleum.html
+++ b/pages/Linoleum/Linoleum.html
@@ -42,10 +42,12 @@
 								</ul>
 							</li>
 							<li>
-								<a class="menu__link" href="../../index.html" title="Главная">Главная</a>
+								<a class="menu__link" href="https://anikey-pavel.github.io/Diploma/index.html"
+									title="Главная">Главная</a>
 							</li>
 							<li>
-								<a class="menu__link" href="../Score/Score.html" title="Магазины">Магазины</a>
+								<a class="menu__link" href="https://anikey-pavel.github.io/Diploma/pages/Score/Score.html"
+									title="Магазины">Магазины</a>
 							</li>
 							<li>
 								<a class="menu__form-link" href="#" onclick="show('block')" title="Регистрация">Регистрация</a>
@@ -88,7 +90,8 @@
 					</div>
 					<div id="weather" class="weather"></div>
 				</div>
-				<a href="../Диплом/index.html" class="header__title" title="Главная">Напольные покрытия</a>
+				<a href="https://anikey-pavel.github.io/Diploma/index.html" class="header__title" title="Главная">Напольные
+					покрытия</a>
 			</div>
 		</div>
 		<div class="content">
@@ -313,26 +316,31 @@
 						</div>
 						<div class="content-footer__column">
 							<div>
-								<a href="../laminat/laminate.html" title="Ламинат">Ламинат</a>
+								<a href="https://anikey-pavel.github.io/Diploma/pages/laminat/laminate.html"
+									title="Ламинат">Ламинат</a>
 							</div>
 
 							<div>
-								<a href="../Linoleum/Linoleum.html" title="Линолиум">Линолиум</a>
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Linoleum/Linoleum.html"
+									title="Линолиум">Линолиум</a>
 							</div>
 							<div>
-								<a href="../Tile/Tile.html" title="Плитка">Плитка</a>
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Tile/Tile.html" title="Плитка">Плитка</a>
 							</div>
 						</div>
 						<div class="content-footer__column">
 							<div>
-								<a href="../Parquet/Parquet.html" title="Паркет">Паркет</a>
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Parquet/Parquet.html"
+									title="Паркет">Паркет</a>
 							</div>
 
 							<div>
-								<a href="../Cork floor/cork-floor.html" title="Пробковый пол">Пробковый пол</a>
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Cork floor/cork-floor.html"
+									title="Пробковый пол">Пробковый пол</a>
 							</div>
 							<div>
-								<a href="../Quartz vinyl/Quartz-vinyl.html" title="Кварц винил">Кварц винил</a>
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Quartz vinyl/Quartz-vinyl.html"
+									title="Кварц винил">Кварц винил</a>
 							</div>
 						</div>
 					</div>
