--- a/pages/Cork floor/cork-floor.html
+++ b/pages/Cork floor/cork-floor.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/cork-floor.css">
 	<link rel="stylesheet" href="../../css/common-styles.css">
-	<title>Напольные покрытия</title>
+	<title>Пробковый пол</title>
 </head>
 
 <body>
