--- a/pages/Score/score.html
+++ b/pages/Score/score.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../Score/css/Score.css">
 	<link rel="stylesheet" href="../../css/common-styles.css">
-	<title>Напольные покрытия</title>
+	<title>Магазины</title>
 </head>
 
 <body>
