--- a/pages/laminat/laminate.html
+++ b/pages/laminat/laminate.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/laminate.css">
 	<link rel="stylesheet" href="../../css/common-styles.css">
-	<title>Напольные покрытия</title>
+	<title>Ламинат</title>
 </head>
 
 <body>
