--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<div id="menu" class="menu__body">
 						<ul class="menu__list">
 							<li>
-								<a id="contact" class="menu__link" href="#contact" title="Контакты">Контакты</a>
+								<a id="contact" class="menu__link" title="Контакты">Контакты</a>
 								<span class="menu__arrow arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
@@ -131,7 +131,7 @@
 					</div>
 					<div class="body__items">
 						<h3>Пробковый пол</h3>
-						<a href="https://anikey-pavel.github.io/Diploma/pages/Cork floor/index.html" class="wave-btn"
+						<a href="https://anikey-pavel.github.io/Diploma/pages/Cork floor/cork-floor.html" class="wave-btn"
 							title="Пробковый пол">
 							<span class="wave-btn__text">Перейти</span>
 							<span class="wave-btn__waves"></span>
@@ -171,7 +171,7 @@
 								<a target="_blank" href="https://t.me/Anikey22" title="https://t.me/Anikey22">Pavel Anikey</a>
 							</div>
 						</div>
-						<div id="contact" class="content-footer__column">
+						<div class="content-footer__column">
 							<div>
 								<a href="tel:+375 (29) 111-11-11" title="Позвонить">+375 (29) 111-11-11</a>
 							</div>
@@ -204,7 +204,7 @@
 							</div>
 
 							<div>
-								<a href="https://anikey-pavel.github.io/Diploma/pages/Cork floor/index.html"
+								<a href="https://anikey-pavel.github.io/Diploma/pages/Cork floor/cork-floor.html"
 									title="Пробковый пол">Пробковый
 									пол</a>
 							</div>
