--- a/pages/Parquet/Parquet.html
+++ b/pages/Parquet/Parquet.html
@@ -46,7 +46,7 @@
 									title="Главная">Главная</a>
 							</li>
 							<li>
-								<a class="menu__link" href="https://anikey-pavel.github.io/Diploma/Score/score.html"
+								<a class="menu__link" href="https://anikey-pavel.github.io/Diploma/pages/Score/score.html"
 									title="Магазины">Магазины</a>
 							</li>
 							<li>
