--- a/pages/Tile/Tile.html
+++ b/pages/Tile/Tile.html
@@ -308,7 +308,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/Tile.js"></script>
+	<script src="../../js/script.js"></script>
 </body>
 
 </html>
