--- a/pages/laminat/laminate.html
+++ b/pages/laminat/laminate.html
@@ -356,7 +356,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/laminate.js"></script>
+	<script src="../../js/script.js"></script>
 </body>
 
 </html>
