--- a/pages/Linoleum/Linoleum.html
+++ b/pages/Linoleum/Linoleum.html
@@ -348,7 +348,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/Linoleum.js"></script>
+	<script src="../../js/script.js"></script>
 </body>
 
 </html>
