--- a/pages/Parquet/Parquet.html
+++ b/pages/Parquet/Parquet.html
@@ -284,7 +284,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/Parquet.js"></script>
+	<script src="../../js/script.js"></script>
 </body>
 
 </html>
