--- a/pages/Quartz vinyl/Quartz-vinyl.html
+++ b/pages/Quartz vinyl/Quartz-vinyl.html
@@ -287,7 +287,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/Quartz-vinyl.js"></script>
+	<script src="../../js/script.js"></script>
 </body>
 
 </html>
