--- a/pages/Cork floor/cork-floor.html
+++ b/pages/Cork floor/cork-floor.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/cork-floor.css">
 	<link rel="stylesheet" href="../../css/common-styles.css">
 	<title>Пробковый пол</title>
+	<link rel="shortcut icon" href="images/icons/icons8-новости-16.png" type="image/png">
 </head>
 
 <body>
