--- a/pages/Parquet/Parquet.html
+++ b/pages/Parquet/Parquet.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/Parquet.css">
 	<link rel="stylesheet" href="../../css/common-styles.css">
 	<title>Паркет</title>
+	<link rel="shortcut icon" href="images/icons/icons8-новости-16.png" type="image/png">
 </head>
 
 <body>
