--- a/pages/Score/score.html
+++ b/pages/Score/score.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="../Score/css/Score.css">
 	<link rel="stylesheet" href="../../css/common-styles.css">
 	<title>Магазины</title>
+	<link rel="shortcut icon" href="images/icons/icons8-новости-16.png" type="image/png">
 </head>
 
 <body>
