--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/common-styles.css">
 	<title>Напольные покрытия</title>
+	<link rel="shortcut icon" href="images/icons/icons8-новости-16.png" type="image/png">
 </head>
 
 <body>
