--- a/pages/Quartz vinyl/Quartz-vinyl.html
+++ b/pages/Quartz vinyl/Quartz-vinyl.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/Quartz-vinyl.css">
 	<link rel="stylesheet" href="../../css/common-styles.css">
 	<title>Кварц винил</title>
+	<link rel="shortcut icon" href="images/icons/icons8-новости-16.png" type="image/png">
 </head>
 
 <body>
