--- a/pages/Tile/Tile.html
+++ b/pages/Tile/Tile.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/Tile.css">
 	<link rel="stylesheet" href="../../css/common-styles.css">
 	<title>Плитка</title>
+	<link rel="shortcut icon" href="images/icons/icons8-новости-16.png" type="image/png">
 </head>
 
 <body>
