--- a/pages/laminat/laminate.html
+++ b/pages/laminat/laminate.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/laminate.css">
 	<link rel="stylesheet" href="../../css/common-styles.css">
 	<title>Ламинат</title>
+	<link rel="shortcut icon" href="images/icons/icons8-новости-16.png" type="image/png">
 </head>
 
 <body>
