--- a/pages/Linoleum/Linoleum.html
+++ b/pages/Linoleum/Linoleum.html
@@ -19,13 +19,13 @@
 		<div class="header">
 			<div class="header__container">
 				<div class="header__menu menu">
-					<div class="menu__icon">
+					<div id="burger" class="menu__icon">
 						<span></span>
 					</div>
-					<div class="menu__body">
+					<div id="menu" class="menu__body">
 						<ul class="menu__list">
 							<li>
-								<a class="menu__link" href="#contact" title="Контакты">Контакты</a>
+								<a id="contact" class="menu__link" href="#contact" title="Контакты">Контакты</a>
 								<span class="menu__arrow arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
