--- a/pages/Linoleum/Linoleum.html
+++ b/pages/Linoleum/Linoleum.html
@@ -25,7 +25,7 @@
 					<div id="menu" class="menu__body">
 						<ul class="menu__list">
 							<li>
-								<a id="contact" class="menu__link" href="#contact" title="Контакты">Контакты</a>
+								<a class="menu__link" href="#contact" title="Контакты">Контакты</a>
 								<span class="menu__arrow arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
@@ -309,7 +309,7 @@
 								<a target="_blank" href="https://t.me/Anikey22" title="https://t.me/Anikey22">Pavel Anikey</a>
 							</div>
 						</div>
-						<div id="contact" class="content-footer__column">
+						<div class="content-footer__column">
 							<div>
 								<a href="tel:+375 (29) 111-11-11" title="Позвонить">+375 (29) 111-11-11</a>
 							</div>
