--- a/pages/Linoleum/Linoleum.html
+++ b/pages/Linoleum/Linoleum.html
@@ -25,7 +25,7 @@
 					<div id="menu" class="menu__body">
 						<ul class="menu__list">
 							<li>
-								<a class="menu__link" href="#contact" title="Контакты">Контакты</a>
+								<a id="contact" class="menu__link" title="Контакты">Контакты</a>
 								<span class="menu__arrow arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
@@ -103,7 +103,7 @@
 		</div>
 		<div class="content">
 			<div class="content__container">
-				<div class="content__header">Линолиум</div>
+				<div class="content__header">Линолеум</div>
 				<div class="line"></div>
 				<div class="content__text text">
 					<div class="iamge">
@@ -329,7 +329,7 @@
 
 							<div>
 								<a href="https://anikey-pavel.github.io/Diploma/pages/Linoleum/Linoleum.html"
-									title="Линолиум">Линолиум</a>
+									title="Линолиум">Линолеум</a>
 							</div>
 							<div>
 								<a href="https://anikey-pavel.github.io/Diploma/pages/Tile/Tile.html" title="Плитка">Плитка</a>
